--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,7 +35,7 @@ jobs:
     - name: Sync using AWS CLI
       run: |
         aws s3 sync dist s3://${{ vars.BITI_BUCKET }} --endpoint-url ${{ vars.BITI_ENDPOINT }} --delete --exclude ".*" --checksum-algorithm CRC32 --size-only
-        aws s3 sync index.html s3://${{ vars.BITI_BUCKET }} --endpoint-url ${{ vars.BITI_ENDPOINT }} --delete --exclude ".*" --checksum-algorithm CRC32 --size-only
+        aws s3 cp dist/index.html s3://${{ vars.BITI_BUCKET }}/index.html --endpoint-url ${{ vars.BITI_ENDPOINT }} --metadata-directive REPLACE --cache-control "no-cache, no-store, must-revalidate"
       env:
         AWS_ACCESS_KEY_ID: ${{ vars.BITI_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ vars.BITI_SECRET_ACCESS_KEY }}
