--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.8.2",
+    "tencentcloud-sdk-nodejs-asr": "^4.1.71",
     "wavesurfer.js": "^7.10.1"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
